Update  with correct url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calm-frontend",
-  "homepage": "https://acupoftee.github.io/calm-frontend",
+  "homepage": "https://github.com/acupoftee/calm-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
