--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-toggle": "^4.0.2",
     "resolve": "1.6.0",
     "url-loader": "0.6.2"
   },
